rem units and gral style

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -5,28 +5,25 @@ body {
 }
 
 h1,
-h2 {
-  font-family: $title;
-}
-
+h2,
 p,
 a {
-  font-family: $text;
+  font-family: $text-font;
 }
 
-button {
-  height: 50px;
-  padding: 0 30px;
-  border-radius: 6px;
-  font-family: $text;
-  border: none;
-  letter-spacing: 1px;
-  font-weight: 600;
-  color: white;
-  background-color: blue;
-  max-width: 200px;
-  width: 100%;
-  &:disabled {
-    filter: grayscale(0.9);
-  }
-}
+// button {
+//   height: 50px;
+//   padding: 0 30px;
+//   border-radius: 6px;
+//   font-family: $text-font;
+//   border: none;
+//   letter-spacing: 1px;
+//   font-weight: 600;
+//   color: white;
+//   background-color: blue;
+//   max-width: 200px;
+//   width: 100%;
+//   &:disabled {
+//     filter: grayscale(0.9);
+//   }
+// }
