--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,6 +19,7 @@ $size-xxxl: 2.25rem; /* 36px */
 $dark-gray: #3b3b3b;
 $light-gray: #939393;
 $error-red: #d42f1a;
+$background: #e1c6dc;
 $button-default: #8a3879;
 $button-hover: #a54f93;
 $button-pressed: #78306b;
