--- a/src/views/LoginView/LoginView.module.scss
+++ b/src/views/LoginView/LoginView.module.scss
@@ -1,3 +1,32 @@
-.test {
-  background-color: lightgrey;
+@import "styles/_variables.scss";
+@import "styles/_base.scss";
+
+.login-view {
+  .background {
+    position: absolute;
+    width: 100%;
+    height: 524px;
+    top: 143px;
+    background-color: $background;
+    border-radius: 40px 40px 0px 0px;
+  }
+
+  .development-img {
+    position: absolute;
+    width: 235px;
+    height: 182px;
+    top: 86px;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
+  .form {
+    position: absolute;
+    width: 100%;
+    height: 388px;
+    top: 292px;
+    background: #ffffff;
+    box-shadow: 0px -14px 16px rgba(0, 0, 0, 0.05);
+    border-radius: 40px 40px 0px 0px;
+  }
 }
