--- a/src/views/LoginView/LoginView.module.scss
+++ b/src/views/LoginView/LoginView.module.scss
@@ -25,7 +25,7 @@
     width: 100%;
     height: 388px;
     top: 292px;
-    background: #ffffff;
+    background-color: $white;
     box-shadow: 0px -14px 16px rgba(0, 0, 0, 0.05);
     border-radius: 40px 40px 0px 0px;
   }
