react router dom

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,11 @@
 @import "src/styles/_variables.scss";
 @import "src/styles/_base.scss";
 
-.app {
-  text-align: center;
+//TODO VER QUE SE HACE CON ESTE ARCHIVO
 
-  header {
-    margin-top: 22px;
-    margin-bottom: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center; //TODO revisar porque en el figma no esta centrado
-    gap: 6px;
-  }
-}
+// .app {
+//   text-align: center;
+// }
 
 // .App-logo {
 //   height: 40vmin;
