--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,10 @@
 
 //TODO VER QUE SE HACE CON ESTE ARCHIVO
 
-// .app {
-//   text-align: center;
-// }
+.app {
+  //   text-align: center;
+  height: 100vh;
+}
 
 // .App-logo {
 //   height: 40vmin;
