--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $error-font: "Encode Sans", sans-serif;
 
 // FONT SIZES
 $size-sm: 0.75rem; /* 12px */
+$size-warning: 0.875rem; /* 14px */
 $size-base: 1rem; /* 16px, browser base */
 $size-md: 1.25rem; /* 20px */
 $size-lg: 1.5rem; /* 24px */
