--- a/src/views/HomeView/HomeView.module.scss
+++ b/src/views/HomeView/HomeView.module.scss
@@ -1,41 +1,83 @@
 @import "styles/_variables.scss";
 @import "styles/_base.scss";
 
-header {
-  margin-top: 22px;
-  margin-bottom: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center; //TODO revisar porque en el figma no esta centrado
-  gap: 6px;
-}
-
 .home-view {
-  .background {
-    position: absolute;
-    width: 100%;
-    height: 524px;
-    top: 143px;
-    background-color: $background;
-    border-radius: 40px 40px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: 100vh;
+  .header {
+    background-color: green;
+    height: 200px;
+    flex-shrink: 0;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    .image {
+      background-color: blue;
+      height: 100%;
+      flex-shrink: 3;
+    }
+    .form {
+      background-color: yellow;
+      height: 350px;
+      flex-shrink: 0;
+    }
   }
 
-  .development-img {
-    position: absolute;
-    width: 235px;
-    height: 182px;
-    top: 86px;
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
+  // box-sizing: border-box;
+  // background-color: green;
+  // height: 100vh;
+  // display: flex;
+  // flex-direction: column;
 
-  .form {
-    position: absolute;
-    width: 100%;
-    height: 388px;
-    top: 292px;
-    background-color: $white;
-    box-shadow: 0px -14px 16px rgba(0, 0, 0, 0.05);
-    border-radius: 40px 40px 0px 0px;
-  }
+  // header {
+  //   //   // flex-shrink: 0;
+  //   padding-top: 22px;
+  //   margin-bottom: 80px;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center; //TODO revisar porque en el figma no esta centrado
+  //   gap: 6px;
+  // }
+
+  // .main {
+  //   //   // flex-grow: 0;
+  //   display: flex;
+  //   flex-direction: column;
+  //   //   width: 100%;
+  //   background-color: $background;
+  //   border-radius: 40px 40px 0px 0px;
+  //   //   flex-wrap: wrap;
+
+  //   .img-container {
+  //     background-color: red;
+  //     height: 100px;
+  //     flex-shrink: 3;
+  //     //     flex: 1;
+  //     //     // display: flex;
+  //     //     // justify-content: center;
+  //     //     // flex-shrink: 2;
+  //     //     // margin-top: -57px;
+  //     //     // margin-bottom: 24px;
+  //     //     .development-img {
+  //     //       // object-fit: contain;
+  //     //       min-height: 0;
+  //     //       min-width: 0;
+  //     //       // max-height: 100%;
+  //     //       // width: 100%;
+  //     //       height: 100%;
+  //     //     }
+  //   }
+
+  //   .form {
+  //     // width: 100%;
+  //     // flex-shrink: 0;
+  //     // margin-top: 78px;
+  //     background-color: blue;
+  //     height: 500px;
+  //   }
+  // }
 }
