--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -3,8 +3,7 @@
 
 .form-container {
   text-align: center;
-  margin-bottom: 32px; //TODO chequear con el fondo blanco que onda
-  // height: 100%;
+  padding-bottom: 32px; //TODO chequear con el fondo blanco que onda
   background-color: $white;
   box-shadow: 0px -14px 16px rgba(0, 0, 0, 0.05);
   border-radius: 40px 40px 0px 0px;
