--- a/src/views/HomeView/HomeView.module.scss
+++ b/src/views/HomeView/HomeView.module.scss
@@ -6,20 +6,36 @@
   flex-direction: column;
   gap: 10px;
   height: 100vh;
+
   .header {
-    background-color: green;
-    height: 200px;
     flex-shrink: 0;
+    padding-top: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center; //TODO revisar porque en el figma no esta centrado
+    gap: 6px;
   }
+
   .main {
     display: flex;
     flex-direction: column;
     height: 100%;
-    .image {
-      background-color: blue;
+
+    .image-container {
       height: 100%;
-      flex-shrink: 3;
+      width: 100%;
+
+      .image {
+        background: url("../../assets/AppDevelopment.png");
+        background-size: contain;
+        background-origin: content-box;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 80%;
+        padding: 30px;
+      }
     }
+
     .form {
       background-color: yellow;
       height: 350px;
@@ -27,57 +43,13 @@
     }
   }
 
-  // box-sizing: border-box;
-  // background-color: green;
-  // height: 100vh;
-  // display: flex;
-  // flex-direction: column;
-
-  // header {
-  //   //   // flex-shrink: 0;
-  //   padding-top: 22px;
-  //   margin-bottom: 80px;
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center; //TODO revisar porque en el figma no esta centrado
-  //   gap: 6px;
-  // }
-
-  // .main {
-  //   //   // flex-grow: 0;
-  //   display: flex;
-  //   flex-direction: column;
-  //   //   width: 100%;
-  //   background-color: $background;
-  //   border-radius: 40px 40px 0px 0px;
-  //   //   flex-wrap: wrap;
-
-  //   .img-container {
-  //     background-color: red;
-  //     height: 100px;
-  //     flex-shrink: 3;
-  //     //     flex: 1;
-  //     //     // display: flex;
-  //     //     // justify-content: center;
-  //     //     // flex-shrink: 2;
-  //     //     // margin-top: -57px;
-  //     //     // margin-bottom: 24px;
-  //     //     .development-img {
-  //     //       // object-fit: contain;
-  //     //       min-height: 0;
-  //     //       min-width: 0;
-  //     //       // max-height: 100%;
-  //     //       // width: 100%;
-  //     //       height: 100%;
-  //     //     }
-  //   }
-
-  //   .form {
-  //     // width: 100%;
-  //     // flex-shrink: 0;
-  //     // margin-top: 78px;
-  //     background-color: blue;
-  //     height: 500px;
-  //   }
-  // }
+  .background {
+    position: absolute;
+    bottom: 0;
+    height: 76%;
+    width: 100%;
+    background-color: $background;
+    border-radius: 40px 40px 0px 0px;
+    z-index: -5;
+  }
 }
