--- a/src/components/RetrievePasswordForm/RetrievePasswordForm.module.scss
+++ b/src/components/RetrievePasswordForm/RetrievePasswordForm.module.scss
@@ -3,13 +3,14 @@
 
 .form-container {
   text-align: center;
+  padding-bottom: 32px; //TODO chequear con el fondo blanco que onda
+  height: 100%;
+  background-color: $white;
+  box-shadow: 0px -14px 16px rgba(0, 0, 0, 0.05);
+  border-radius: 40px 40px 0px 0px;
 
   .login-container {
     padding: 30px 23px;
-
-    h1 {
-      margin-bottom: 27px;
-    }
 
     .form {
       display: flex;
