--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -31,7 +31,7 @@
         font-style: normal;
         font-weight: 400;
         font-size: $size-warning;
-        line-height: 21px;
+        line-height: $size-md;
         color: #3c3c3b;
       }
       margin-bottom: 28px;
