--- a/src/components/Common/Input.module.scss
+++ b/src/components/Common/Input.module.scss
@@ -22,6 +22,7 @@
   .field-container {
     width: 100%;
     position: relative;
+
     input {
       height: $size-input;
       padding: 10px 12px 10px 10px;
@@ -44,6 +45,10 @@
       }
     }
 
+    .error-input {
+      border: 1px solid $error-red;
+    }
+
     .eye {
       position: absolute;
       top: 29%;
@@ -52,6 +57,27 @@
       g {
         width: 30px;
       }
+    }
+  }
+
+  .error-message {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-top: 8px;
+
+    svg {
+      height: 20px;
+      width: 20px;
+    }
+
+    strong {
+      font-family: $error-font;
+      font-style: normal;
+      font-weight: 400;
+      font-size: $size-warning;
+      line-height: $size-md;
+      color: $error-red;
     }
   }
 }
