--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -58,4 +58,22 @@
       color: $button-default;
     }
   }
+
+  .loading-screen {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    background: rgba(255, 255, 255, 0.85);
+
+    .spinner {
+      object-fit: cover;
+      position: absolute;
+      width: 100px;
+      transform: translate(-50%, -50%);
+      top: 50%;
+      left: 50%;
+    }
+  }
 }
