--- a/src/components/Common/Button.module.scss
+++ b/src/components/Common/Button.module.scss
@@ -1,7 +1,7 @@
 @import "styles/_variables.scss";
 @import "styles/_base.scss";
 
-button {
+.button {
   height: $size-input;
   width: 100%;
   padding: 12px 12px;
